--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "openai": "^4.80.1",
     "phpdie": "^1.2.15",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-markdown": "^9.0.3"
   },
   "devDependencies": {
     "typescript": "^5",
